# actix-web-mongo-elastic-example

./: Cargo.toml  README.md  application.properties  docker-compose.yml
src/: configuration.rs  error.rs  handlers.rs  main.rs
src/repository/: es.rs  mod.rs  mongo.rs
