[package]
name = "actix-web-mongo-elastic-example"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
tokio = { version = "1", features = ["fs", "io-util"]}
log = "0.4"
env_logger = "0.8"

serde = "1"
serde_json = "1"
java-properties = "1.3"
validator = { version = "0.12", features = ["derive"] }

mongodb = "2.0.0-alpha"
elasticsearch = "7.11.0-alpha.1"
